Potentially fix mobile search bar overlap

--- a/src/components/card/styles.module.scss
+++ b/src/components/card/styles.module.scss
@@ -1,7 +1,7 @@
 @import 'src/styles/variables';
 
 @mixin card() {
-    width: 80%;
+    width: 90%;
     height: 170px;
     border-radius: 30px;
     padding: 25px;
