--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -17,7 +17,7 @@ body {
 
     width: 100%;
     max-width: 430px;
-    height: 100vh;
+    height: 100%;
     position: fixed;
 
     display: flex;
